--- a/examples/VC_O3_O4/inputs/postproc/accuracy_linfom.ipynb
+++ b/examples/VC_O3_O4/inputs/postproc/accuracy_linfom.ipynb
@@ -119,7 +119,6 @@
    "outputs": [],
    "source": [
     "system = TAFASystem(\n",
-    "  T=T,\n",
     "  rates=path_to_dtb + \"/kinetics.hdf5\",\n",
     "  species={\n",
     "    k: path_to_dtb + f\"/species/{k}.json\" for k in (\"atom\", \"molecule\")\n",
@@ -147,9 +146,10 @@
     "def compute_linfom_err(path, index, eval_err=True):\n",
     "  # Load data\n",
     "  data = utils.load_case(path=path, index=index)\n",
-    "  n0, t, n = [data[k] for k in (\"n0\", \"t\", \"n\")]\n",
+    "  T, t, n0, n = [data[k] for k in (\"T\", \"t\", \"n0\", \"n\")]\n",
     "  rho = data[\"mu\"][-1]\n",
     "  # Solve linear system\n",
+    "  system.update_fom_ops(T)\n",
     "  nl = system.solve_lin_fom(t, n0)\n",
     "  if eval_err:\n",
     "    # Convert to mass fractions\n",
@@ -228,21 +228,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f44caace",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "i = np.argmin(np.linalg.norm(err - err_mean, axis=-1))\n",
-    "np.savetxt(path_to_saving + \"/traj_index.txt\", i.reshape(1), fmt=\"%i\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
    "id": "72a731ed",
    "metadata": {},
    "outputs": [],
    "source": [
+    "i = np.argmin(np.linalg.norm(err - err_mean, axis=-1))\n",
     "_, t, n, nl = compute_linfom_err(\n",
     "  path=path_to_data, index=indices[i], eval_err=False\n",
     ")"
@@ -261,7 +251,7 @@
     "  n_m={\"FOM\": n[1], \"Linearized FOM\": nl[1]},\n",
     "  molecule=system.mix.species[\"molecule\"],\n",
     "  molecule_label=\"\\\\text{O$_2$}\",\n",
-    "  tlim={\"m0\": [1e-8, 1e-4], \"m1\": [1e-9, 1e-4]},\n",
+    "  tlim={\"m0\": [1e-9, 1e-5], \"m1\": [1e-9, 1e-5]},\n",
     "  ylim_err=[1e-9,1e3],\n",
     "  err_scale=\"log\",\n",
     "  hline=1e1,\n",
