--- a/examples/VC_O3_O4/inputs/postproc/timescales.ipynb
+++ b/examples/VC_O3_O4/inputs/postproc/timescales.ipynb
@@ -90,7 +90,7 @@
    "source": [
     "path_to_dtb = \"/home/zanardi/Codes/ML/RONEK/run_03/VC_O3_O4/database/\"\n",
     "path_to_bases = {\n",
-    "  m: f\"/home/zanardi/Codes/ML/RONEK/run/VC_O3_O4/test/max_mom_{m}/bases.hdf5\" for m in (2,10)\n",
+    "  m: f\"//home/zanardi/Codes/ML/RONEK/run/VC_O3_O4/test/max_mom_{m}/cobras_bases.hdf5\" for m in (2,10)\n",
     "}\n",
     "rom_dims = {\n",
     "  4: 2,\n",
@@ -114,7 +114,6 @@
    "outputs": [],
    "source": [
     "system = TAFASystem(\n",
-    "  T=T,\n",
     "  rates=path_to_dtb + \"/kinetics.hdf5\",\n",
     "  species={\n",
     "    k: path_to_dtb + f\"/species/{k}.json\" for k in (\"atom\", \"molecule\")\n",
@@ -157,6 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "system.update_fom_ops(T)\n",
     "n_eq = system.mix.compute_eq_comp(rho)\n",
     "A[\"FOM\"] = system._compute_lin_fom_ops_a_full(n_eq[0], by_mass=False)"
    ]
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fe930b67",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
     "  # Set basis\n",
     "  phi = bases[m][\"phi\"][:,:r]\n",
     "  psi = bases[m][\"psi\"][:,:r]\n",
-    "  system._set_basis(phi, psi)\n",
+    "  system.set_basis(phi, psi)\n",
     "  # Compute ROM linear operator\n",
     "  A[f\"ROM-{r+1}\"] = system._compute_lin_fom_ops_a_full(\n",
     "    n_a_eq=n_eq[0],\n",
