--- a/examples/VC_O3_O4/database/utils/compose_kinetics.ipynb
+++ b/examples/VC_O3_O4/database/utils/compose_kinetics.ipynb
@@ -55,6 +55,7 @@
    "outputs": [],
    "source": [
     "T = 1e4\n",
+    "Tstr = str(int(T))\n",
     "nb_states = 45\n",
     "# Databases\n",
     "kin_file = {\n",
@@ -164,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ma_dtb = kinetics[\"RVS\"][f\"T_{int(T)}_{int(T)}\"][\"Rates\"]"
+    "ma_dtb = kinetics[\"RVS\"][f\"T_{Tstr}_{Tstr}\"][\"Rates\"]"
    ]
   },
   {
@@ -196,7 +197,7 @@
     "  # Reshape and rescale\n",
     "  rates = rates.reshape(shape) * cm3_to_m3\n",
     "  # Store\n",
-    "  kin_dtb[\"m-a\"][p] = rates"
+    "  kin_dtb[\"m-a\"][p] = {Tstr: rates}"
    ]
   },
   {
@@ -227,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mm_dtb = kinetics[\"VS\"][f\"T_{int(T)}_{int(T)}\"][\"Rates\"]"
+    "mm_dtb = kinetics[\"VS\"][f\"T_{Tstr}_{Tstr}\"][\"Rates\"]"
    ]
   },
   {
@@ -258,30 +259,9 @@
     "  rates = rates.reshape(shape) * cm3_to_m3\n",
     "  # Store\n",
     "  if (p in kin_dtb[\"m-m\"]):\n",
-    "    kin_dtb[\"m-m\"][p] += rates\n",
+    "    kin_dtb[\"m-m\"][p][Tstr] += rates\n",
     "  else:\n",
-    "    kin_dtb[\"m-m\"][p] = rates"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aa32e25f",
-   "metadata": {},
-   "source": [
-    "> Set Arrhenius parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "5af48b91",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for c in kin_dtb.keys():\n",
-    "  for p in kin_dtb[c].keys():\n",
-    "    zeros = np.zeros_like(kin_dtb[c][p])\n",
-    "    kin_dtb[c][p] = {\"A\": kin_dtb[c][p], \"beta\": zeros, \"Ta\": zeros}"
+    "    kin_dtb[\"m-m\"][p] = {Tstr: rates}"
    ]
   },
   {
@@ -294,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "c657093f",
    "metadata": {},
    "outputs": [],
