--- a/examples/VC_O3_O4/inputs/postproc/accuracy_linfom.ipynb
+++ b/examples/VC_O3_O4/inputs/postproc/accuracy_linfom.ipynb
@@ -119,12 +119,13 @@
    "outputs": [],
    "source": [
     "system = TAFASystem(\n",
-    "  rates=path_to_dtb + \"/kinetics.hdf5\",\n",
     "  species={\n",
     "    k: path_to_dtb + f\"/species/{k}.json\" for k in (\"atom\", \"molecule\")\n",
     "  },\n",
+    "  rates_coeff=path_to_dtb + \"/kinetics.hdf5\",\n",
     "  use_einsum=False,\n",
-    "  use_factorial=True\n",
+    "  use_factorial=True,\n",
+    "  use_arrhenius=False\n",
     ")"
    ]
   },
@@ -240,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "115fc81f",
    "metadata": {},
    "outputs": [],
