--- a/examples/VC_O3_O4/inputs/postproc/timescales.ipynb
+++ b/examples/VC_O3_O4/inputs/postproc/timescales.ipynb
@@ -88,9 +88,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_to_dtb = \"/home/zanardi/Codes/ML/RONEK/run_03/VC_O3_O4/database/\"\n",
+    "path_to_dtb = \"/home/zanardi/Codes/ML/RONEK/ronek/examples/VC_O3_O4/database/\"\n",
     "path_to_bases = {\n",
-    "  m: f\"//home/zanardi/Codes/ML/RONEK/run/VC_O3_O4/test/max_mom_{m}/cobras_bases.hdf5\" for m in (2,10)\n",
+    "  m: f\"/home/zanardi/Codes/ML/RONEK/run/VC_O3_O4/test/max_mom_{m}/cobras_bases.hdf5\" for m in (2,10)\n",
     "}\n",
     "rom_dims = {\n",
     "  4: 2,\n",
@@ -114,12 +114,13 @@
    "outputs": [],
    "source": [
     "system = TAFASystem(\n",
-    "  rates=path_to_dtb + \"/kinetics.hdf5\",\n",
     "  species={\n",
     "    k: path_to_dtb + f\"/species/{k}.json\" for k in (\"atom\", \"molecule\")\n",
     "  },\n",
+    "  rates_coeff=path_to_dtb + \"/kinetics.hdf5\",\n",
     "  use_einsum=False,\n",
-    "  use_factorial=True\n",
+    "  use_factorial=True,\n",
+    "  use_arrhenius=False\n",
     ")"
    ]
   },
