--- a/examples/RVC_O3/database/utils/compose_kinetics.ipynb
+++ b/examples/RVC_O3/database/utils/compose_kinetics.ipynb
@@ -38,6 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "T = [5e3, 8e3, 1e4, 1.2e4, 1.5e4]\n",
     "nb_states = 6115\n",
     "kin_file = \"/home/zanardi/Workspace/AirDatabase/HDF5/QCT/Orig/O3_UMN.hdf5\""
    ]
@@ -88,25 +89,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kin_dtb[\"m-a\"] = {}\n",
-    "for (k, rates) in kinetics[\"Arrhenius\"].items():\n",
-    "  if (k == \"Diss_Corr\"):\n",
-    "    p = \"d\"\n",
-    "    shape = (nb_states,1,1,1,1)\n",
-    "  elif (k == \"Excit\"):\n",
-    "    p = \"e\"\n",
-    "    shape = (nb_states,1,nb_states,1)\n",
-    "    # Remove endothermic processes\n",
-    "    triu_i = np.triu_indices(nb_states)\n",
-    "    for k in rates.keys():\n",
-    "      rates[k][triu_i[0],triu_i[1]] = 0.0\n",
-    "  else:\n",
-    "    continue\n",
-    "  # Reshape and rescale\n",
-    "  rates = {k: coeff.reshape(shape) for (k, coeff) in rates.items()}\n",
-    "  rates[\"A\"] *= cm3_to_m3\n",
-    "  # Store\n",
-    "  kin_dtb[\"m-a\"][p] = rates"
+    "kin_dtb = {}\n",
+    "for Ti in T:\n",
+    "  T_str = str(int(Ti))\n",
+    "  ma_dtb = kinetics[f\"T_{T_str}_{T_str}\"][\"Rates\"]\n",
+    "  # Loop over processes\n",
+    "  kin_dtb[T_str] = {\"m-a\": {}}\n",
+    "  for (k, rates) in ma_dtb.items():\n",
+    "    if (k == \"Diss_Corr\"):\n",
+    "      p = \"d\"\n",
+    "      shape = (nb_states,1,1,1,1)\n",
+    "    elif (k == \"Excit\"):\n",
+    "      p = \"e\"\n",
+    "      shape = (nb_states,1,nb_states,1)\n",
+    "      # Remove endothermic processes\n",
+    "      triu_i = np.triu_indices(nb_states)\n",
+    "      rates[triu_i[0],triu_i[1]] = 0.0\n",
+    "    else:\n",
+    "      continue\n",
+    "    # Reshape and rescale\n",
+    "    rates = rates.reshape(shape) * cm3_to_m3\n",
+    "    # Store\n",
+    "    kin_dtb[T_str][\"m-a\"][p] = rates"
    ]
   },
   {
