--- a/examples/RVC_O3/database/utils/compose_kinetics.ipynb
+++ b/examples/RVC_O3/database/utils/compose_kinetics.ipynb
@@ -89,12 +89,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kin_dtb = {}\n",
+    "kin_dtb = {\"m-a\": {}}\n",
     "for Ti in T:\n",
     "  T_str = str(int(Ti))\n",
     "  ma_dtb = kinetics[f\"T_{T_str}_{T_str}\"][\"Rates\"]\n",
     "  # Loop over processes\n",
-    "  kin_dtb[T_str] = {\"m-a\": {}}\n",
     "  for (k, rates) in ma_dtb.items():\n",
     "    if (k == \"Diss_Corr\"):\n",
     "      p = \"d\"\n",
@@ -110,7 +109,9 @@
     "    # Reshape and rescale\n",
     "    rates = rates.reshape(shape) * cm3_to_m3\n",
     "    # Store\n",
-    "    kin_dtb[T_str][\"m-a\"][p] = rates"
+    "    if (p not in kin_dtb[\"m-a\"]):\n",
+    "      kin_dtb[\"m-a\"][p] = {}\n",
+    "    kin_dtb[\"m-a\"][p][T_str] = rates\n"
    ]
   },
   {
