--- a/examples/RVC_O3/database/rom_mt/utils/read_plato_sol.ipynb
+++ b/examples/RVC_O3/database/rom_mt/utils/read_plato_sol.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,18 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "testcase = \"cold\"\n",
+    "testcase = \"hot\"\n",
     "sol_file = \"/home/zanardi/Workspace/AirDatabase/ThermoChemModels/MT/run/O3/output_box/cold.dat\"\n",
     "columns = [\"t\", \"X_O\", \"X_O2\", \"Th\", \"Tv\", \"rho\", \"p\", \"n\", \"E\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
