--- a/examples/RVC_O3/database/rom_cg/utils/read_plato_sol.ipynb
+++ b/examples/RVC_O3/database/rom_cg/utils/read_plato_sol.ipynb
@@ -17,9 +17,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_bins = 8\n",
+    "nb_bins = 12\n",
     "clustering = \"ADA\"\n",
-    "testcase = \"hot\"\n",
+    "testcase = \"cold\"\n",
     "prefix = \"/home/zanardi/Workspace/AirDatabase/ThermoChemModels/CG/run/O3_UMN/\""
    ]
   },
