--- a/examples/RVC_O3/database/rom_mt/utils/compute_rate.ipynb
+++ b/examples/RVC_O3/database/rom_mt/utils/compute_rate.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ecological-duration",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c619776d",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
     "T = 1e4\n",
     "lev_file = \"/home/zanardi/Codes/TC/HyperNet/database/levels/O3_UMN/O2.csv\"\n",
     "kin_file = \"/home/zanardi/Workspace/AirDatabase/HDF5/QCT/Orig/O3_UMN.hdf5\"\n",
-    "sol_file = \"/home/zanardi/Codes/ML/RONEK/run/RVC_O3/test/data/case_cold.p\""
+    "sol_file = \"/home/zanardi/Codes/ML/RONEK/run/RVC_O3/test/data/case_cold_T10000.p\""
    ]
   },
   {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "bccb8cba",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2ce2bc9e",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "6a2d6189",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a1eda044",
    "metadata": {},
    "outputs": [],
@@ -134,6 +134,7 @@
     "plt.semilogx(t, e)\n",
     "plt.xlabel(\"$t$ [s]\")\n",
     "plt.ylabel(\"$e$ [eV]\")\n",
+    "plt.xlim([1e-8,2e-5])\n",
     "plt.show()\n",
     "plt.close()"
    ]
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "85bfa1df",
    "metadata": {},
    "outputs": [],
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "9cce7415",
    "metadata": {},
    "outputs": [],
