--- a/examples/RVC_O3/database/rom_mt/utils/compute_tau.ipynb
+++ b/examples/RVC_O3/database/rom_mt/utils/compute_tau.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "23dfe0bb",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a3f1891e",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
     "env_cfg = {\n",
     "  \"backend\": \"torch\",\n",
     "  \"device\": \"cuda\",\n",
-    "  \"device_idx\": 1,\n",
+    "  \"device_idx\": 0,\n",
     "  \"nb_threads\": 8,\n",
     "  \"epsilon\": 1e-10,\n",
     "  \"floatx\": \"float64\"\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "fcef4582",
    "metadata": {},
    "outputs": [],
@@ -86,14 +86,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "dimensional-mounting",
    "metadata": {},
    "outputs": [],
    "source": [
     "T = 1e4\n",
-    "lev_file = \"/home/zanardi/Codes/TC/HyperNet/database/levels/O3_UMN/O2.csv\"\n",
-    "path_to_dtb = \"/home/zanardi/Codes/ML/RONEK/run/RVC_O3/database/\""
+    "lev_file = \"/home/zanardi/Codes/ML/RONEK/ronek/examples/RVC_O3/database/O2.csv\"\n",
+    "path_to_dtb = \"/home/zanardi/Codes/ML/RONEK/ronek/examples/RVC_O3/database/\""
    ]
   },
   {
@@ -106,23 +106,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "56de8211",
+   "execution_count": null,
+   "id": "6e522b40",
    "metadata": {},
    "outputs": [],
    "source": [
     "system = sys_mod.TASystem(\n",
-    "  T=T,\n",
-    "  rates=path_to_dtb + \"/kinetics.hdf5\",\n",
     "  species={\n",
     "    k: path_to_dtb + f\"/species/{k}.json\" for k in (\"atom\", \"molecule\")\n",
-    "  }\n",
-    ")"
+    "  },\n",
+    "  rates_coeff=path_to_dtb + \"/kinetics.hdf5\",\n",
+    "  use_einsum=False,\n",
+    "  use_factorial=True,\n",
+    "  use_arrhenius=True\n",
+    ")\n",
+    "system.update_fom_ops(T)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "4acd257b",
    "metadata": {},
    "outputs": [],
@@ -143,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "5513e2f3",
    "metadata": {},
    "outputs": [],
@@ -162,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "23282e15",
    "metadata": {},
    "outputs": [],
@@ -184,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "a334e13e",
    "metadata": {},
    "outputs": [],
@@ -203,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "67661957",
    "metadata": {},
    "outputs": [],
@@ -223,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "18fbd1df",
    "metadata": {},
    "outputs": [],
@@ -242,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "be68db21",
    "metadata": {},
    "outputs": [],
@@ -260,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "5a58b90c",
    "metadata": {},
    "outputs": [],
@@ -270,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "30bf3383",
    "metadata": {},
    "outputs": [],
@@ -285,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "c0290156",
    "metadata": {},
    "outputs": [],
@@ -303,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "d5af5ff3",
    "metadata": {},
    "outputs": [],
@@ -318,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "3744434c",
    "metadata": {},
    "outputs": [],
