--- a/examples/RVC_O3/database/rom_mt/utils/read_plato_sol.ipynb
+++ b/examples/RVC_O3/database/rom_mt/utils/read_plato_sol.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import numpy as np\n",
     "import pandas as pd"
    ]
@@ -16,8 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "testcase = \"hot\"\n",
-    "sol_file = \"/home/zanardi/Workspace/AirDatabase/ThermoChemModels/MT/run/O3/output_box/cold.dat\"\n",
+    "testcase = \"cold_T10000\"\n",
+    "sol_file = \"/home/zanardi/Workspace/AirDatabase/ThermoChemModels/MT/run/O3/output_box/box.dat\"\n",
     "columns = [\"t\", \"X_O\", \"X_O2\", \"Th\", \"Tv\", \"rho\", \"p\", \"n\", \"E\"]"
    ]
   },
@@ -27,8 +28,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "path_to_saving = \"./../testcases/\"\n",
+    "os.makedirs(path_to_saving, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df = pd.DataFrame(data=np.loadtxt(sol_file, comments=\"#\"), index=None, columns=columns)\n",
-    "df.to_csv(f\"./../testcases/{testcase}.csv\", index=None, float_format='%.12e')"
+    "df.to_csv(path_to_saving + f\"/{testcase}.csv\", index=None, float_format='%.12e')"
    ]
   }
  ],
