--- a/examples/RVC_O3/inputs/postproc/accuracy_linfom.ipynb
+++ b/examples/RVC_O3/inputs/postproc/accuracy_linfom.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2c8ff0da",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "8dba1102",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c937bec4",
    "metadata": {},
    "outputs": [],
@@ -80,12 +80,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d82caec9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "T = 1e4\n",
     "path_to_dtb = \"/home/zanardi/Codes/ML/RONEK/ronek/examples/RVC_O3/database/\"\n",
     "path_to_data = \"/home/zanardi/Codes/ML/RONEK/run/RVC_O3/test/data/\"\n",
     "path_to_saving = \"./lin_fom/\"\n",
@@ -95,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "fec84777",
    "metadata": {},
    "outputs": [],
@@ -113,19 +112,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f06bacee",
    "metadata": {},
    "outputs": [],
    "source": [
     "system = TASystem(\n",
-    "  T=T,\n",
-    "  rates=path_to_dtb + \"/kinetics.hdf5\",\n",
     "  species={\n",
     "    k: path_to_dtb + f\"/species/{k}.json\" for k in (\"atom\", \"molecule\")\n",
     "  },\n",
+    "  rates_coeff=path_to_dtb + \"/kinetics.hdf5\",\n",
     "  use_einsum=False,\n",
-    "  use_factorial=True\n",
+    "  use_factorial=True,\n",
+    "  use_arrhenius=True\n",
     ")"
    ]
   },
@@ -139,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "43dd89be",
    "metadata": {},
    "outputs": [],
@@ -147,9 +146,10 @@
     "def compute_linfom_err(path, index, eval_err=True):\n",
     "  # Load data\n",
     "  data = utils.load_case(path=path, index=index)\n",
-    "  n0, t, n = [data[k] for k in (\"n0\", \"t\", \"n\")]\n",
+    "  T, t, n0, n = [data[k] for k in (\"T\", \"t\", \"n0\", \"n\")]\n",
     "  rho = data[\"mu\"][-1]\n",
     "  # Solve linear system\n",
+    "  system.update_fom_ops(T)\n",
     "  nl = system.solve_lin_fom(t, n0)\n",
     "  if eval_err:\n",
     "    # Convert to mass fractions\n",
@@ -169,30 +169,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "err = jl.Parallel(nb_workers)(\n",
-    "  jl.delayed(compute_linfom_err)(\n",
-    "    path=path_to_data,\n",
-    "    index=i\n",
-    "  ) for i in tqdm(\n",
-    "    iterable=range(nb_samples),\n",
-    "    ncols=80,\n",
-    "    file=sys.stdout\n",
+    "os.makedirs(path_to_saving + \"/data/\", exist_ok=True)\n",
+    "if os.path.isfile(path_to_saving + \"/data/error.txt\"):\n",
+    "  indices = np.loadtxt(path_to_saving + \"/data/indices.txt\").astype(int)\n",
+    "  t = np.loadtxt(path_to_saving + \"/data/time.txt\")\n",
+    "  err = np.loadtxt(path_to_saving + \"/data/error.txt\")\n",
+    "else:\n",
+    "  err = jl.Parallel(nb_workers)(\n",
+    "    jl.delayed(compute_linfom_err)(\n",
+    "      path=path_to_data,\n",
+    "      index=i\n",
+    "    ) for i in tqdm(\n",
+    "      iterable=range(nb_samples),\n",
+    "      ncols=80,\n",
+    "      file=sys.stdout\n",
+    "    )\n",
     "  )\n",
-    ")\n",
-    "indices, t, err = list(zip(*err))\n",
-    "err = np.vstack(err)\n",
+    "  indices, t, err = list(zip(*err))\n",
+    "  indices = np.array(indices).reshape(-1)\n",
+    "  t = t[0].reshape(-1)\n",
+    "  err = np.vstack(err)\n",
+    "  for (name, data) in (\n",
+    "    (\"indices\", indices),\n",
+    "    (\"time\", t),\n",
+    "    (\"error\", err)\n",
+    "  ):\n",
+    "    np.savetxt(path_to_saving + f\"/data/{name}.txt\", data)\n",
     "err_mean = np.mean(err, axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bf91e5d5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.savetxt(path_to_saving + \"/error.txt\", err)\n",
-    "np.savetxt(path_to_saving + \"/time.txt\", t.reshape(-1))"
    ]
   },
   {
@@ -205,13 +208,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "6bddca54",
    "metadata": {},
    "outputs": [],
    "source": [
     "pp.plot_err_ci_evolution(\n",
-    "  x=t[0],\n",
+    "  x=t,\n",
     "  mean=err_mean,\n",
     "  sem=sp.stats.sem(err, axis=0),\n",
     "  size=len(err),\n",
@@ -238,13 +241,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "217adba6",
    "metadata": {},
    "outputs": [],
    "source": [
     "i = np.argmin(np.linalg.norm(err - err_mean, axis=-1))\n",
-    "np.savetxt(path_to_saving + \"/traj_index.txt\", i.reshape(1), fmt=\"%i\")"
+    "np.savetxt(path_to_saving + \"/data/traj_index.txt\", i.reshape(1), fmt=\"%i\")"
    ]
   },
   {
