--- a/examples/RVC_O3/inputs/postproc/timescales.ipynb
+++ b/examples/RVC_O3/inputs/postproc/timescales.ipynb
@@ -45,7 +45,6 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "import copy\n",
     "import numpy as np\n",
     "import scipy as sp\n",
     "\n",
@@ -71,7 +70,7 @@
    "outputs": [],
    "source": [
     "T = 1e4\n",
-    "rho = 1e-3"
+    "rho = 1e-2"
    ]
   },
   {
@@ -89,13 +88,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_to_dtb = \"//home/zanardi/Codes/ML/RONEK/run/RVC_O3/database/\"\n",
+    "path_to_dtb = \"/home/zanardi/Codes/ML/RONEK/ronek/examples/RVC_O3/database/\"\n",
     "path_to_bases = {\n",
-    "  m: f\"/home/zanardi/Codes/ML/RONEK/run/RVC_O3/test/max_mom_{m}/bases.hdf5\" for m in (2,10)\n",
+    "  m: f\"/home/zanardi/Codes/ML/RONEK/run/RVC_O3/test/max_mom_{m}/cobras_bases.hdf5\" for m in (2,10)\n",
     "}\n",
     "rom_dims = {\n",
     "  8: 2,\n",
-    "  16: 10\n",
+    "  24: 10\n",
     "}"
    ]
   },
@@ -115,13 +114,13 @@
    "outputs": [],
    "source": [
     "system = TASystem(\n",
-    "  T=T,\n",
-    "  rates=path_to_dtb + \"/kinetics.hdf5\",\n",
     "  species={\n",
     "    k: path_to_dtb + f\"/species/{k}.json\" for k in (\"atom\", \"molecule\")\n",
     "  },\n",
+    "  rates_coeff=path_to_dtb + \"/kinetics.hdf5\",\n",
     "  use_einsum=False,\n",
-    "  use_factorial=False\n",
+    "  use_factorial=True,\n",
+    "  use_arrhenius=True\n",
     ")"
    ]
   },
@@ -130,19 +129,37 @@
    "id": "f3d56ef1",
    "metadata": {},
    "source": [
-    "Eigedeomposion of the linear operator\n",
-    "> FOM"
+    "Eigedeomposion of the linear operator"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "902df407",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = {}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc0b101a",
+   "metadata": {},
+   "source": [
+    "> FOM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "12319f51",
    "metadata": {},
    "outputs": [],
    "source": [
+    "system.update_fom_ops(T)\n",
     "n_eq = system.mix.compute_eq_comp(rho)\n",
-    "A = {\"FOM\": system._compute_lin_fom_ops_a_full(n_eq[0])}"
+    "A[\"FOM\"] = system._compute_lin_fom_ops_a_full(n_eq[0], by_mass=False)"
    ]
   },
   {
@@ -155,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "fe930b67",
    "metadata": {},
    "outputs": [],
@@ -165,24 +182,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "e5efb1c0",
    "metadata": {},
    "outputs": [],
    "source": [
     "for (r, m) in rom_dims.items():\n",
-    "\n",
+    "  # Set basis\n",
     "  phi = bases[m][\"phi\"][:,:r]\n",
     "  psi = bases[m][\"psi\"][:,:r]\n",
-    "  system._set_basis(phi, psi)\n",
-    "\n",
-    "  phi = np.zeros((system.nb_eqs, r+1))\n",
-    "  phi[0,0] = 1.0\n",
-    "  psi = copy.deepcopy(phi)\n",
-    "  phi[1:,1:] = system.phi\n",
-    "  psi[1:,1:] = system.psi\n",
-    "\n",
-    "  A[f\"ROM-{r+1}\"] = psi.T @ A[\"FOM\"] @ phi"
+    "  system.set_basis(phi, psi)\n",
+    "  # Compute ROM linear operator\n",
+    "  A[f\"ROM-{r+1}\"] = system._compute_lin_fom_ops_a_full(\n",
+    "    n_a_eq=n_eq[0],\n",
+    "    phi=system.phi,\n",
+    "    psi=system.psi,\n",
+    "    by_mass=False\n",
+    "  )"
    ]
   },
   {
@@ -195,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "3e9dd7e5",
    "metadata": {},
    "outputs": [],
@@ -208,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "d669ff5c",
    "metadata": {},
    "outputs": [],
