--- a/examples/RVC_N3/database/utils/compose_kinetics.ipynb
+++ b/examples/RVC_N3/database/utils/compose_kinetics.ipynb
@@ -41,9 +41,9 @@
    "source": [
     "T = None\n",
     "use_arrhenius = True\n",
-    "nb_lev = 6115\n",
-    "kin_file = \"/home/zanardi/Workspace/AirDatabase/HDF5/QCT/Orig/O3_UMN.hdf5\"\n",
-    "arr_fit = \"Arrhenius_T5000_T15000\""
+    "nb_lev = 9390\n",
+    "kin_file = \"/home/zanardi/Workspace/AirDatabase/HDF5/QCT/Orig/N3_NASA_ORIG.hdf5\"\n",
+    "arr_fit = \"Arrhenius_T7500_T30000\""
    ]
   },
   {
@@ -105,10 +105,10 @@
     "if use_arrhenius:\n",
     "\n",
     "  for (k, rates) in kinetics[arr_fit].items():\n",
-    "    if (k == \"Diss_Corr\"):\n",
+    "    if (k == \"Diss\"):\n",
     "      p = \"d\"\n",
     "      shape = (nb_lev,1,1,1,1)\n",
-    "    elif (k == \"Excit\"):\n",
+    "    elif (k == \"Inel\"):\n",
     "      p = \"e\"\n",
     "      shape = (nb_lev,1,nb_lev,1)\n",
     "      # Remove endothermic processes\n",
@@ -131,10 +131,10 @@
     "    ma_dtb = kinetics[f\"T_{T_str}_{T_str}\"][\"Rates\"]\n",
     "    # Loop over processes\n",
     "    for (k, rates) in ma_dtb.items():\n",
-    "      if (k == \"Diss_Corr\"):\n",
+    "      if (k == \"Diss\"):\n",
     "        p = \"d\"\n",
     "        shape = (nb_lev,1,1,1,1)\n",
-    "      elif (k == \"Excit\"):\n",
+    "      elif (k == \"Inel\"):\n",
     "        p = \"e\"\n",
     "        shape = (nb_lev,1,nb_lev,1)\n",
     "        # Remove endothermic processes\n",
