--- a/examples/VC_O3_O4/database/utils/compose_kinetics.ipynb
+++ b/examples/VC_O3_O4/database/utils/compose_kinetics.ipynb
@@ -49,18 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d1d709e8-d714-466b-aa2f-bfd235333a83",
    "metadata": {},
    "outputs": [],
    "source": [
     "T = 1e4\n",
     "Tstr = str(int(T))\n",
-    "nb_states = 45\n",
+    "nb_lev = 45\n",
     "# Databases\n",
     "kin_file = {\n",
-    "  \"RVS\": \"/home/zanardi/Workspace/AirDatabase/HDF5/QCT/Orig/O3_UMN.hdf5\",\n",
-    "  \"VS\": \"/home/zanardi/Workspace/AirDatabase/HDF5/QCT/Orig/O4_UMN_VSM.hdf5\"\n",
+    "  \"RVC\": \"/home/zanardi/Workspace/AirDatabase/HDF5/QCT/Orig/O3_UMN.hdf5\",\n",
+    "  \"VC\": \"/home/zanardi/Workspace/AirDatabase/HDF5/QCT/Orig/O4_UMN_VSM.hdf5\"\n",
     "}\n",
     "mol_file = \"./../species/molecule.json\"\n",
     "lev_file = \"./../../../RVC_O3/database/O2.csv\""
@@ -160,12 +160,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "9217bfd5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ma_dtb = kinetics[\"RVS\"][f\"T_{Tstr}_{Tstr}\"][\"Rates\"]"
+    "ma_dtb = kinetics[\"RVC\"][f\"T_{Tstr}_{Tstr}\"][\"Rates\"]"
    ]
   },
   {
@@ -179,18 +179,18 @@
     "for (k, rates) in ma_dtb.items():\n",
     "  if (k == \"Diss_Corr\"):\n",
     "    p = \"d\"\n",
-    "    shape = (nb_states,1,1,1,1)\n",
+    "    shape = (nb_lev,1,1,1,1)\n",
     "    # Project\n",
     "    rates = Pq.T @ rates\n",
     "  elif (k == \"Excit\"):\n",
     "    p = \"e\"\n",
-    "    shape = (nb_states,1,nb_states,1)\n",
+    "    shape = (nb_lev,1,nb_lev,1)\n",
     "    # Project\n",
     "    triu_i = np.triu_indices(rates.shape[0])\n",
     "    rates[triu_i[0],triu_i[1]] = 0.0\n",
     "    rates = Pq.T @ rates @ P\n",
     "    # Remove endothermic processes\n",
-    "    triu_i = np.triu_indices(nb_states)\n",
+    "    triu_i = np.triu_indices(nb_lev)\n",
     "    rates[triu_i[0],triu_i[1]] = 0.0\n",
     "  else:\n",
     "    continue\n",
@@ -223,12 +223,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "7bce42aa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mm_dtb = kinetics[\"VS\"][f\"T_{Tstr}_{Tstr}\"][\"Rates\"]"
+    "mm_dtb = kinetics[\"VC\"][f\"T_{Tstr}_{Tstr}\"][\"Rates\"]"
    ]
   },
   {
@@ -242,18 +242,18 @@
     "for (k, rates) in mm_dtb.items():\n",
     "  if (k == \"Diss\"):\n",
     "    p = \"d\"\n",
-    "    shape = (nb_states,nb_states,1,1,1,1)\n",
+    "    shape = (nb_lev,nb_lev,1,1,1,1)\n",
     "    rates = rates[...,0]\n",
     "  elif (k == \"DissInel\"):\n",
     "    p = \"ed\"\n",
-    "    shape = (nb_states,nb_states,1,1,nb_states)\n",
+    "    shape = (nb_lev,nb_lev,1,1,nb_lev)\n",
     "    rates = rates[...,0]\n",
     "  else:\n",
     "    p = \"e\"\n",
-    "    shape = tuple([nb_states]*4)\n",
+    "    shape = tuple([nb_lev]*4)\n",
     "    # Remove endothermic processes\n",
-    "    for i in range(nb_states):\n",
-    "      for j in range(nb_states):\n",
+    "    for i in range(nb_lev):\n",
+    "      for j in range(nb_lev):\n",
     "        rates[i,j][eij[i,j] <= eij] = 0.0\n",
     "  # Reshape and rescale\n",
     "  rates = rates.reshape(shape) * cm3_to_m3\n",
