--- a/examples/RVC_N3/inputs/postproc/accuracy_linfom.ipynb
+++ b/examples/RVC_N3/inputs/postproc/accuracy_linfom.ipynb
@@ -85,8 +85,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_to_dtb = \"/home/zanardi/Codes/ML/RONEK/ronek/examples/RVC_O3/database/\"\n",
-    "path_to_data = \"/home/zanardi/Codes/ML/RONEK/run/RVC_O3/test/data/\"\n",
+    "path_to_dtb = \"/home/zanardi/Codes/ML/RONEK/ronek/examples/RVC_N3/database/\"\n",
+    "path_to_data = \"/home/zanardi/Codes/ML/RONEK/run/RVC_N3/test/data/\"\n",
     "path_to_saving = \"./lin_fom/\"\n",
     "nb_samples = 1000\n",
     "nb_workers = 10"
@@ -274,7 +274,7 @@
     "  t=t,\n",
     "  n_m={\"FOM\": n[1], \"Linearized FOM\": nl[1]},\n",
     "  molecule=system.mix.species[\"molecule\"],\n",
-    "  molecule_label=\"\\\\text{O$_2$}\",\n",
+    "  molecule_label=\"\\\\text{N$_2$}\",\n",
     "  tlim={\"m0\": [1e-8, 1e-4], \"m1\": [1e-9, 1e-4]},\n",
     "  ylim_err=[1e-9,1e3],\n",
     "  err_scale=\"log\",\n",
