--- a/examples/RVC_N3/database/utils/compose_kinetics.ipynb
+++ b/examples/RVC_N3/database/utils/compose_kinetics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a1ba1c77",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6511bd45",
    "metadata": {},
    "outputs": [],
@@ -39,8 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "T = None\n",
-    "use_arrhenius = True\n",
+    "T = [2e4]\n",
+    "use_arrhenius = False\n",
     "nb_lev = 9390\n",
     "kin_file = \"/home/zanardi/Workspace/AirDatabase/HDF5/QCT/Orig/N3_NASA_ORIG.hdf5\"\n",
     "arr_fit = \"Arrhenius_T7500_T30000\""
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7fa29e71",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "7253279d",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ab3b3257",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "c657093f",
    "metadata": {},
    "outputs": [],
