--- a/examples/RVC_N3/database/utils/compose_kinetics.ipynb
+++ b/examples/RVC_N3/database/utils/compose_kinetics.ipynb
@@ -40,10 +40,10 @@
    "outputs": [],
    "source": [
     "T = [2e4]\n",
-    "use_arrhenius = False\n",
-    "nb_lev = 9390\n",
-    "kin_file = \"/home/zanardi/Workspace/AirDatabase/HDF5/QCT/Orig/N3_NASA_ORIG.hdf5\"\n",
-    "arr_fit = \"Arrhenius_T7500_T30000\""
+    "use_arrhenius = True\n",
+    "nb_lev = 9399\n",
+    "kin_file = \"/home/zanardi/Workspace/AirDatabase/HDF5/QCT/Orig/N3_NASA.hdf5\"\n",
+    "arr_fit = \"Arrhenius_T2500_T20000\""
    ]
   },
   {
@@ -105,10 +105,10 @@
     "if use_arrhenius:\n",
     "\n",
     "  for (k, rates) in kinetics[arr_fit].items():\n",
-    "    if (k == \"Diss\"):\n",
+    "    if (k == \"Diss_Mean\"):\n",
     "      p = \"d\"\n",
     "      shape = (nb_lev,1,1,1,1)\n",
-    "    elif (k == \"Inel\"):\n",
+    "    elif (k == \"Excit\"):\n",
     "      p = \"e\"\n",
     "      shape = (nb_lev,1,nb_lev,1)\n",
     "      # Remove endothermic processes\n",
@@ -131,10 +131,10 @@
     "    ma_dtb = kinetics[f\"T_{T_str}_{T_str}\"][\"Rates\"]\n",
     "    # Loop over processes\n",
     "    for (k, rates) in ma_dtb.items():\n",
-    "      if (k == \"Diss\"):\n",
+    "      if (k == \"Diss_Mean\"):\n",
     "        p = \"d\"\n",
     "        shape = (nb_lev,1,1,1,1)\n",
-    "      elif (k == \"Inel\"):\n",
+    "      elif ((k == \"Inel\") or (k == \"Exch_1\")):\n",
     "        p = \"e\"\n",
     "        shape = (nb_lev,1,nb_lev,1)\n",
     "        # Remove endothermic processes\n",
@@ -143,8 +143,12 @@
     "      else:\n",
     "        continue\n",
     "      # Reshape and rescale\n",
+    "      if (k == \"Diss\"):\n",
+    "        rates = rates[:,0]\n",
     "      rates = rates.reshape(shape) * cm3_to_m3\n",
     "      # Store\n",
+    "      if ((p in kin_dtb[\"m-a\"].keys()) and (p == \"e\")):\n",
+    "        kin_dtb[\"m-a\"][p][T_str] += rates\n",
     "      if (p not in kin_dtb[\"m-a\"]):\n",
     "        kin_dtb[\"m-a\"][p] = {}\n",
     "      kin_dtb[\"m-a\"][p][T_str] = rates"
